--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-popcon (1.3) unstable; urgency=medium
+
+  * Provide Python3 module
+
+ -- Bastian Venthur <venthur@debian.org>  Mon, 24 Aug 2015 12:43:11 +0200
+
 python-popcon (1.2) unstable; urgency=medium
 
   * Fix previous NMU "FTBFS: Missing Build-Depends on python"
