--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,12 @@ python-popcon (1.3+nmu1) UNRELEASED; urgency=medium
 
   * Non-maintainer upload.
   * Add support for querying sourcemax statistics.
+  * Don't mix up pickle formats; this causes bad lookups when py2/py3 both
+    use the same file.
+
+  [ Chris Lamb ]
+  * Fix missing Depends on python3-xdg. (Closes: #833693)
+  * Don't assume all-popcon-results.txt.gz is UTF-8. (Closes: #833738)
 
  -- Ximin Luo <infinity0@debian.org>  Tue, 13 Sep 2016 19:11:38 +0200
 
