--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ python-popcon (1.3+nmu1) UNRELEASED; urgency=medium
   * Add support for querying sourcemax statistics.
   * Don't mix up pickle formats; this causes bad lookups when py2/py3 both
     use the same file.
+  * Update to latest Standards-Version; no changes required.
 
   [ Chris Lamb ]
   * Fix missing Depends on python3-xdg. (Closes: #833693)
