--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-popcon (1.3+nmu1) UNRELEASED; urgency=medium
+python-popcon (1.3+nmu1) unstable; urgency=medium
 
   * Non-maintainer upload.
   * Add support for querying sourcemax statistics.
@@ -10,7 +10,7 @@ python-popcon (1.3+nmu1) UNRELEASED; urgency=medium
   * Fix missing Depends on python3-xdg. (Closes: #833693)
   * Don't assume all-popcon-results.txt.gz is UTF-8. (Closes: #833738)
 
- -- Ximin Luo <infinity0@debian.org>  Tue, 13 Sep 2016 19:11:38 +0200
+ -- Ximin Luo <infinity0@debian.org>  Tue, 13 Sep 2016 19:58:28 +0200
 
 python-popcon (1.3) unstable; urgency=medium
 
