--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+python-popcon (1.4) unstable; urgency=medium
+
+  * Acknowledge NMU, thanks Chris Lamb and Ximin Luo!
+  * Changed docstrings to follow numpy standard
+  * Updated setup.py to reflect proper library version
+  * Added pythonX-xdg to build-depends
+
+ -- Bastian Venthur <venthur@debian.org>  Wed, 28 Sep 2016 13:39:23 +0200
+
 python-popcon (1.3+nmu1) unstable; urgency=medium
 
   * Non-maintainer upload.
