--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+python-popcon (2.0.1) unstable; urgency=medium
+
+  * deprecated functions with packages as positional arguments, the new ones
+    use list of packages instead
+  * removed useles requirements.txt
+  * added html report to coverage
+
+ -- Bastian Venthur <venthur@debian.org>  Sun, 17 Nov 2019 16:25:18 +0100
+
 python-popcon (2.0.0) unstable; urgency=medium
 
   * Dropped Python2 support
