--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ python-popcon (2.0.4) UNRELEASED; urgency=medium
 
   * Bump debhelper from deprecated 9 to 12.
   * Set debhelper-compat version in Build-Depends.
+  * Use canonical URL in Vcs-Git.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 22 Jun 2021 19:22:12 -0000
 
