--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+python-popcon (2.0.4) unstable; urgency=medium
+
+  * updated debian's build system
+  * New upstream version:
+    * updated build system
+    * use github actions instead of travis
+    * bumped minimal Python version to 3.6
+
+ -- Bastian Venthur <venthur@debian.org>  Sun, 08 Aug 2021 13:46:37 +0200
+
 python-popcon (2.0.3) unstable; urgency=medium
 
   * Fixed missing version bump (no changes)
