--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-popcon (3.0.3) unstable; urgency=medium
+
+  * source-only upload
+
+ -- Bastian Venthur <venthur@debian.org>  Wed, 29 Jun 2022 21:42:40 +0200
+
 python-popcon (3.0.2) unstable; urgency=medium
 
   * bumped version to allow to migrate to Debian/testing (no changes)
